@@ -1,16 +1,14 @@
+
 package com.example.service;
 
 import com.example.model.Jobseeker;
 import com.example.repositary.JobseekerRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.User;
-import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.core.userdetails.*;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 public class JobseekerUserDetailsService implements UserDetailsService {
@@ -19,16 +17,13 @@ public class JobseekerUserDetailsService implements UserDetailsService {
     private JobseekerRepository jobseekerRepository;
 
     @Override
-    public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-        Jobseeker jobseeker = jobseekerRepository.findByEmail(email);
-        if (jobseeker == null) {
-            throw new UsernameNotFoundException("Jobseeker not found with email: " + email);
+    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+        Jobseeker jobseeker = jobseekerRepository.findByEmail(username)
+                .orElseThrow(() -> new UsernameNotFoundException("Jobseeker not found"));
+        if (!jobseeker.isEmailVerified()) {
+            throw new UsernameNotFoundException("Email not verified");
         }
-
-        return new User(
-                jobseeker.getEmail(),
-                jobseeker.getPassword(),
-                Collections.singletonList(new SimpleGrantedAuthority("ROLE_JOBSEEKER"))
-        );
+        return new User(jobseeker.getEmail(), jobseeker.getPassword(),
+                List.of(new SimpleGrantedAuthority("ROLE_JOBSEEKER")));
     }
 }
